testing mobile testing ul width 3

--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -127,7 +127,7 @@
                 </div>
                 
                 <!-- <div class="col-sm-6 text-center"> -->
-                                <ul style="margin:auto;">
+                                <!-- <ul style="margin:auto;"> -->
                                     <div class="col-lg-40" style="text-align:left">
                                     <!-- <font size = "3px"> -->
                                         <p>
@@ -435,7 +435,7 @@
                                 })();
                                 </script>
                                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            </ul>                
+                            <!-- </ul>                 -->
                 <!-- </div> -->
                 <!-- <div class="col-sm-8 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
