--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -113,7 +113,7 @@
             <div class="box">
                 <div class="col-lg-30">
                     <hr>
-                        <h2 class="intro-text text-center">
+                        <!-- <h2 class="intro-text text-center">
                             <font size="6px">What is Neuroengineering?</font>
                             <br><br>
                             <font size="4px">October 29, 2018</font>
@@ -122,7 +122,7 @@
                                 <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
                                 <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
                             </h3>
-                        </h2>
+                        </h2> -->
                     <hr>
                 </div>
                 
