--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -64,6 +64,8 @@
     <a href="https://twitter.com/SaberaTalukder"><span style="font-size:24pt"><img src="img/twitter.png"><font color="white"></font></span></a>
     &nbsp;
     <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao"><span style="font-size:20pt"><img src="img/scholar.png"><font color="white"></font></span></a>
+
+    </div>
 <!--     <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder">Tweet</a> --></div>
