--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -109,7 +109,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
+    <div class="container" style="width:67%">
 
         <div class="row">
             <div class="box">
