--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -389,10 +389,12 @@
                                     &emsp; We have covered a lot of ways to collect <b>systems level, functional neural data</b> from the brain. And now we should celebrate our knowledge by running an experiment!
                                     <br><br>
                                     &emsp;If you click on the image below, a virtual lab environment will appear. In this neuroscience lab you will be able to inject fluorescent dyes into leech neurons (a little different than what we discussed, but just pretend you are injecting a chemical indicator), and measure action potentials from leech neurons!
-
+                                    <br>
+                                    <figure>
                                     <a href="https://www.hhmi.org/biointeractive/neurophysiology-virtual-lab" target="_blank">
                                         <img class="img-border img-left" src="img/HHMI.png" alt="categories of neural prostheses: central nervous system, or peripheral nervous system, invasive or non-invasive. Where brain machine interfaces, brain computer interfaces, and neural prosthetics fall" style="width:40%; height:100%; margin-left: 30%; margin-right: 30%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width: thick">
                                     </a>
+                                    </figure>
                                     <br>
                                     &emsp; Neurons are amazing, and the ways in which we attempt to measure their action potentials across systems will keep improving. For now though we've gotten a comprehensive understanding of how we gather these signals!
                                         
