--- a/neuroTag.html
+++ b/neuroTag.html
@@ -139,6 +139,32 @@
                 <!-- <div class="col-sm-6 text-center"> -->
                             <nav>
                                 <!-- <ul> -->
+                                <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                                <h3 style="line-height: 1.6;">
+                                        <a href="functional_neural_systems_data.html" style="color:#505050" align="left">How Do You Collect Sytems Level Functional Neural Data?</a> <small style="color:#000">November 12, 2018</small>
+                                        <br>
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
+                                        <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
+
+                                            
+                                    </h3>
+                                            
+                                    <figure class="img-set">
+                                        <a href="functional_neural_systems_data.html">
+                                            <img class="img-border img-left" src="img/top_image.jpg" alt="" style="width:25%; height:25%; border-radius:10px;">
+                                        </a>
+                                    </figure>
+                                    <p><font face="Garamond" size="5px" color="505050">An incredibly important step, maybe even the most important step, in neuroengineering pipelines is collecting neural signals from the brain...
+                                    <br><br>
+                                    <b><u>Keywords:</u></b> Optical Imaging, Chemical Indicators, Genetic Indicators, GECI, GEVI, Electrical Recording, Utah Arrays, Neuropixel, ECoG, EEG, fMRI
+                                    </font>
+
+                                    </p>
+
+                                </div>
+                                <hr>
+
+
                                     <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                                         <h3 style="line-height: 1.6;">
                                             <a href="what_is_neuroengineering.html" style="color:#505050" align="left">What is Neuroengineering?</a> <small style="color:#000">October 29, 2018</small>
