--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -16,9 +16,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="What is Neuroengineering?">
-    <meta name="twitter:description" content="Neuroengineering. Neural engineering. Neurotechnology. You have heard variations of these words in whispers throughout the internet...">
-    <meta name="twitter:image" content="https://saberatalukder.com/img/neural_cover.jpg">
+    <meta name="twitter:title" content="How Do You Collect Sytems Level Functional Neural Data?">
+    <meta name="twitter:description" content="An incredibly important step, maybe even the most important step, in neuroengineering pipelines is collecting neural signals from the brain...">
+    <meta name="twitter:image" content="https://saberatalukder.com/img/top_image.jpg">
 
 
     <meta charset="utf-8">
@@ -116,13 +116,12 @@
                 <div class="col-lg-12">
                     <hr>
                         <h2 class="intro-text text-center">
-                            <font size="5px" class="text-left">How Do You Collect Functional Neural Data?</font>
+                            <font size="5px" class="text-left">How Do You Collect Sytems Level Functional Neural Data?</font>
                             <br><br>
-                            <font size="4px">November 5, 2018</font>
+                            <font size="4px">November 12, 2018</font>
                             <h3 class="text-center">
-                                <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
                                 <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
-                                <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
+                                <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
                             </h3>
                         </h2>
                     <hr>
