--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -237,7 +237,7 @@
                                     <br><br>
                                     &emsp; Having a low signal-to-noise ratio means that it is difficult to pick out when the neuron is fluorescing because the background also contains some fluorescent signal. This is partially because voltage indicators are only present on the neuron's membrane, unlike the calcium indicators which are present in the cytosol. There is therefore less area to pack in the indicators that produce the fluorescence signal.
                                     <br><br>
-                                    &emsp; Voltage indicators perform really well on <b>when</b> metric, but struggle a little more on the <b>which</b> and <b>where</b> metric when compared to calcium indicators. However, there is a lot of up and coming research devoted to making voltage indicators more viable <i>in vivo</i>.
+                                    &emsp; Voltage indicators perform really well on the <b>when</b> metric, but struggle a little more on the <b>which</b> and <b>where</b> metric when compared to calcium indicators. However, there is a lot of up and coming research devoted to making voltage indicators more viable <i>in vivo</i>.
                                     <br><br>
                                     &emsp; Despite these difficulties the images generated are truly amazing. It is crazy that we have the capabilities to see an action potential. The video below is the first one we looked, and is a voltage indicator.
                                     <br><br>
