--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -258,7 +258,7 @@
                                     <br>
                                     &emsp; Calcium indicators have slower kinetics than voltage indicators, however calcium indicators are much more mature than voltage indicators are. By mature I mean that they have been more developed and used in the field of neuroscience and neuroengineering. Voltage indicators, however, are being heavily developed.
                                     <br><br>
-                                    &emsp;There are many more issues with both of types of indicators like phototoxicity or photostability. Phototoxicity is when neurons get damaged because they are being exposed to too much light. Photostability is when the indicator cannot hold its conformation when exposed to lots of light energy. These are just a few of the issues we can run into.
+                                    &emsp;There are many more issues with both of types of indicators like phototoxicity or photostability. Phototoxicity is when neurons get damaged because they are being exposed to too much light. Photostability is when the indicator cannot hold its conformation under lots of light exposure. These are just a few of the issues we can run into.
                                     <br><br>
                                     &emsp; To recap: calcium indicators are currently more widely used than voltage indicators, voltage indicators have faster kinetics than calcium indicators, and calcium indicators are cytosol bound while voltage indicators are membrane bound. We have covered a lot of ground, but how the heck do these indicators get put in certain neural populations? I am so glad you asked! 
 
