--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -278,7 +278,7 @@
                                     <br>
                                     &emsp; Genetic indicators are very much the superstars on the block when it comes to optical imaging, because the indicator is encoded in DNA! This means that the neuron itself has the capability to construct its own fluorescence indicator, injection free.
                                     <br><br>
-                                    &emsp;As long as you can encode the indicator into the genes of specific neural populations, you have the specificity you need. There are many expression systems to target neural populations depending on the animal model. In fruit flies, the Gal4-UAS system is popular, in mice Cre-Lox is widely used. Those expression systems are easily multiple blog posts on their own, so we won't dive in now.
+                                    &emsp;As long as you can encode the indicator into the genes of specific neural populations, you get the precision you need. There are many expression systems to target neural populations depending on the animal model. In fruit flies, the Gal4-UAS system is popular, in mice Cre-Lox is widely used. Those expression systems are easily multiple blog posts on their own, so we won't dive in now.
                                     <br><br>
                                     &emsp;The specificity of this technique combined with the many methods allowing you to target neuronal subpopulations means that genetic indicators are a blessing for neuroscientists and neuroengineers alike. In fact, all the videos we have seen thus far are either genetically encoded calcium indicators, GECIs, or genetically encoded voltage indicators, GEVIs. Below is another GECI video!
                                     <br><br>
