--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -327,7 +327,7 @@
                                     &emsp; The neuropixel probe is different from both Utah arrays because it is capable of recording all the way down its shank instead of just at the tip. In addition, each row of the neuropixel has 4 recording sites. It is therefore able to collect neural activity across a plane (the advantage of the 3D-2D arrays), as well as across many depths (the advantage of the 3D-3D arrays).
                                     <br><br>
 
-                                    &emsp; The neuropixel probe just got released to the neuroscience and neuroengineering communities at large on October 31st, 2018. In case you are counting that is roughly two weeks ago. This technology is state of the art.
+                                    &emsp; The neuropixel probe just got released to the neuroscience and neuroengineering communities at large on October 31st, 2018. In case you are counting, that is roughly two weeks ago. This technology is state of the art.
 
                                     <br><br>
                                     &emsp;According to the president and chief scientist at the Allen Institute, Christof Koch, "in the race between optical and electric methods of recording large-scale cellular activity, imec’s Neuropixels just delivered the next great leap forward – reliably recording spikes from hundreds of neurons simultaneously with sub-millisecond resolution in a small, convenient and inexpensive package”. This is a huge deal!
