--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -368,7 +368,7 @@
                                     <br><br>
                                     <b><u>fMRI: Functional Magnetic Resonance Imaging</u></b>
                                     <br>
-                                    &emsp; Before we can explain what fMRI is capable of let's see what an MRI machine looks like, and then describe what an fMRI scan looks at.
+                                    &emsp; Before we explain what fMRI is capable of let's see what an MRI machine and fMRI scan look like.
                                     <img class="img-border img-left" src="img/MRI_scan.jpg" alt="categories of neural prostheses: central nervous system, or peripheral nervous system, invasive or non-invasive. Where brain machine interfaces, brain computer interfaces, and neural prosthetics fall" style="width:100%; height:100%; margin-left: 0%; margin-right: 00%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width: thick">
                                     <br>
                                     &emsp;A common fMRI technique is the BOLD fMRI, so we are going to dive into how it <i>functions</i>. To start off, BOLD fMRI stands for blood oxygenation level dependent functional magnetic resonance imaging. Wow that was a lot, but let's go for it!
