--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -371,7 +371,7 @@
                                     &emsp; Before we explain what fMRI is capable of let's see what an MRI machine and fMRI scan look like.
                                     <img class="img-border img-left" src="img/MRI_scan.jpg" alt="categories of neural prostheses: central nervous system, or peripheral nervous system, invasive or non-invasive. Where brain machine interfaces, brain computer interfaces, and neural prosthetics fall" style="width:100%; height:100%; margin-left: 0%; margin-right: 00%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width: thick">
                                     <br>
-                                    &emsp;A common fMRI technique is the BOLD fMRI, so we are going to dive into how it <i>functions</i>. To start off, BOLD fMRI stands for blood oxygenation level dependent functional magnetic resonance imaging. Wow that was a lot, but let's go for it!
+                                    &emsp;A common fMRI technique is BOLD fMRI, so we are going to dive into how it <i>functions</i>. To start off, BOLD fMRI stands for blood oxygenation level dependent functional magnetic resonance imaging. Wow that was a lot, but let's go for it!
                                     <br><br>
                                     &emsp; The premise of BOLD is that neurons do not have an internal reserves of sugar and oxygen which means when they fire an action potential they use up energy that must be replenished. This process of using then needing sugar and oxygen is called the hemodynamic response.
                                     <br><br>
