adding the blog post about my journey into science

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -103,10 +102,44 @@
                     <h2 class="intro-text text-center">Welcome to My Blog!
                         <!-- <strong>worth visiting</strong> -->
                     </h2>
+                    <br>
+                    <div class="text-center">
+                        <font face="Garamond" size="3px" color="505050">
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='miscellaneaTag.html'" style="font-size:18px; font:bold; background-color:#32CD32; border-color:#32CD32; btn:hover"><b>Miscellanea</b></button>
+                        </font>
+                    </div>
                     <hr>
                 </div>
 
                 <br><br><br><br><br>
+                <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                    <h3 style="line-height: 1.6;">
+                        <a href="what_makes_someone_a_successful_scientist_or_engineer.html" style="color:#505050" align="left">What Makes Someone a Successful Scientist or Engineer?</a> <small style="color:#000">February 13, 2019</small>
+                         <br>
+                         <button type="button" class="btn btn-info" onclick="window.location.href='miscellaneaTag.html'" style="font-size:18px; font:bold; background-color:#32CD32; border-color:#32CD32; btn:hover"><b>Miscellanea</b></button>
+                                   
+                    </h3>
+                                            
+                    <figure class="img-set">
+                        <a href="what_makes_someone_a_successful_scientist_or_engineer.html">
+                            <img class="img-border img-left" src="img/STEM_img.png" alt="" style="width:25%; height:25%; border-radius:10px;">
+                        </a>
+                    </figure>
+                                    <p><font face="Garamond" size="5px" color="505050">What will make you a successful scientist, technologist, engineer, or mathematician? Hard work, tenacity, and passion applied to...
+                                    <br><br>
+                                    <b><u>Keywords:</u></b> Science, Technology, Engineering, Mathematics, Google Science Fair, Scientific American, Science in Action, Bangladesh, Water Purification
+                                    </font>
+
+                                    </p>
+
+                </div>
+
+
+                <hr>
                 <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3 style="line-height: 1.6;">
                                         <a href="functional_neural_systems_data.html" style="color:#505050" align="left">How Do You Collect Sytems Level Functional Neural Data?</a> <small style="color:#000">November 12, 2018</small>
