--- a/miscellaneaTag.html
+++ b/miscellaneaTag.html
@@ -237,7 +237,7 @@
                     -->
                     <!-- <h1 style="font-size:125%;"> What is Neuroengineering? (09/10/18)</h1> -->
                 
-                <<!-- /div>
+                <!-- /div>
             </div> -->
     </div>
 
