experimenting with twitter card preview

--- a/what_makes_someone_a_successful_scientist_or_engineer.html
+++ b/what_makes_someone_a_successful_scientist_or_engineer.html
@@ -16,9 +16,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="What is Neuroengineering?">
-    <meta name="twitter:description" content="Neuroengineering. Neural engineering. Neurotechnology. You have heard variations of these words in whispers throughout the internet...">
-    <meta name="twitter:image" content="https://saberatalukder.com/img/neural_cover.jpg">
+    <meta name="twitter:title" content="What Makes Someone a Successful Scientist or Engineer?">
+    <meta name="twitter:description" content="Hard work, tenacity, and passion applied to problems that interest you and make the world a better place. Before I dive into how these character traits manifest themselves throughout the process of problem solving, let me take an aside and tell you about where my journey in science and engineering began...">
+    <meta name="twitter:image" content="https://saberatalukder.com/img/Sabera_and_Vint_Cerf.jpg">
 
 
     <meta charset="utf-8">
