--- a/biohub_neuroengineering_symposium_papers.html
+++ b/biohub_neuroengineering_symposium_papers.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-12">
                     <hr>
                         <h2 class="intro-text text-center">
-                            <font size="5px" class="text-left">Paper Recap: The Biohub Neuroengineering Symposium</font>
+                            <font size="5px" class="text-left">Paper Recap: The CZ Biohub Neuroengineering Symposium</font>
                             <br><br>
                             <font size="4px">May 6, 2019</font>
                             <h3 class="text-center">
@@ -136,7 +136,7 @@
 
                                         <img class="img-border img-center" src="img/Michel_Maharbiz.JPG" alt="Michel Maharbiz, at the Chan Zuckerberg Biohub." style="width:75%; height:75%; margin-left: 12%; margin-right: 50%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width:thick">
 
-                                        &nbsp;&nbsp;&nbsp;<u>Recordings:</u>
+                                        &nbsp;&nbsp;&nbsp;<u>Recording:</u>
                                         <ul>
                                         <li><a href="https://ieeetv.ieee.org/mobile/video/recent-advances-neural-dust-platform-ieee-brain">Recording of a similar lecture given at the 2018 IEEE Brain Workshop</a></li>
                                         </ul>
@@ -297,7 +297,7 @@
 
                                         <b>Loren Frank (UCSF) -</b> New Tools for Understanding Distributed Patterns of Brain Activity
                                         <img class="img-border img-center" src="img/Loren_Frank.JPG" alt="Loren Frank at the Chan Zuckerberg Biohub." style="width:75%; height:75%; margin-left: 12%; margin-right: 50%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width:thick">
-                                         &nbsp;&nbsp;&nbsp;<u>Tutorials:</u>
+                                         &nbsp;&nbsp;&nbsp;<u>Tutorial:</u>
                                         <ul>
                                         <li><a href="http://neurodatawithoutborders.github.io/">Neurodata Without Borders</a></li>
                                         </ul>
