--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,34 @@
                     <hr>
                 </div>
 
+
                 <br><br><br><br><br>
+                <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                    <h3 style="line-height: 1.6;">
+                        <a href="biohub_neuroengineering_symposium_papers.html" style="color:#505050" align="left">Paper Recap: The CZ Biohub Neuroengineering Symposium</a> <small style="color:#000">May 6, 2019</small>
+                         <br>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
+                                   
+                    </h3>
+                                            
+                    <figure class="img-set">
+                        <a href="biohub_neuroengineering_symposium_papers.html">
+                            <img class="img-border img-left" src="img/neuroengineering_symposium.jpg" alt="" style="width:25%; height:50%; border-radius:10px;">
+                        </a>
+                    </figure>
+                                    <p><font face="Garamond" size="5px" color="505050">A little over two weeks ago the Chan Zuckerberg Biohub kicked off its first ever Neuroengineering Symposium. It was a momentous event bringing together...
+                                    <br><br>
+                                    <b><u>Keywords:</u></b> Neuroengineering, Neural Engineering, Machine Learning, Artificial Neural Networks, Neuroscience, Neurotechnology, AI, Deep Learning
+                                    </font>
+
+                                    </p>
+
+                </div>
+                <hr>
+
                 <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3 style="line-height: 1.6;">
                         <a href="what_makes_someone_a_successful_scientist_or_engineer.html" style="color:#505050" align="left">What Makes Someone a Successful Scientist or Engineer?</a> <small style="color:#000">February 13, 2019</small>
