updating twitter card neuroE symposium

--- a/biohub_neuroengineering_symposium_papers.html
+++ b/biohub_neuroengineering_symposium_papers.html
@@ -16,9 +16,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="What Makes Someone a Successful Scientist or Engineer?">
-    <meta name="twitter:description" content="Hard work, tenacity, and passion applied to problems that interest you and make the world a better place. Before I dive into how these character traits manifest themselves throughout the process of problem solving, let me take an aside and tell you about where my journey in science and engineering began...">
-    <meta name="twitter:image" content="https://saberatalukder.com/img/Sabera_and_Vint_Cerf.jpg">
+    <meta name="twitter:title" content="Paper Recap: The CZ Biohub Neuroengineering Symposium">
+    <meta name="twitter:description" content="A little over two weeks ago the Chan Zuckerberg Biohub kicked off its first ever Neuroengineering Symposium. It was a momentous event bringing together...">
+    <meta name="twitter:image" content="https://saberatalukder.com/img/neuroengineering_symposium.jpg">
 
 
     <meta charset="utf-8">
@@ -297,7 +297,7 @@
 
                                         <b>Loren Frank (UCSF) -</b> New Tools for Understanding Distributed Patterns of Brain Activity
                                         <img class="img-border img-center" src="img/Loren_Frank.JPG" alt="Loren Frank at the Chan Zuckerberg Biohub." style="width:75%; height:75%; margin-left: 12%; margin-right: 50%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width:thick">
-                                         &nbsp;&nbsp;&nbsp;<u>Tutorial:</u>
+                                         &nbsp;&nbsp;&nbsp;<u>Tutorialnb:</u>
                                         <ul>
                                         <li><a href="http://neurodatawithoutborders.github.io/">Neurodata Without Borders</a></li>
                                         </ul>
