--- a/biohub_neuroengineering_symposium_papers.html
+++ b/biohub_neuroengineering_symposium_papers.html
@@ -297,7 +297,7 @@
 
                                         <b>Loren Frank (UCSF) -</b> New Tools for Understanding Distributed Patterns of Brain Activity
                                         <img class="img-border img-center" src="img/Loren_Frank.JPG" alt="Loren Frank at the Chan Zuckerberg Biohub." style="width:75%; height:75%; margin-left: 12%; margin-right: 50%; margin-top: 3%; margin-bottom: 3%; border-radius:30px; border-width:thick">
-                                         &nbsp;&nbsp;&nbsp;<u>Tutorialnb:</u>
+                                         &nbsp;&nbsp;&nbsp;<u>Tutorial:</u>
                                         <ul>
                                         <li><a href="http://neurodatawithoutborders.github.io/">Neurodata Without Borders</a></li>
                                         </ul>
