fixing openwater img for mobile

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -80,8 +80,8 @@
     border-radius: 15%
     }
     .img_2-3{
-    background-image:url('img/openwater.webp');
-    background-color: white;
+    background-image:url('img/openwater.png');
+    background-color: black;
     border-radius: 15%
     } 
     .img_3-1{
