checking text on mobile

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -44,9 +44,9 @@
     float:left;
     position: relative;
     width: 30%;
-    padding-bottom : 20%; /* = width for a 1:1 aspect ratio */
+    /*padding-bottom : 20%;*/ /* = width for a 1:1 aspect ratio */
     margin:1.66%;
-    background-position:center;
+    background-position:top;
     background-repeat:no-repeat;
     background-size:contain; /* you change this to "contain" if you don't want the images to be cropped */
     }
@@ -300,12 +300,49 @@
                                         <h3>Non-invasive:
                                         <br>
                                         Neuromodulators / Neurorecorders / Brain-Machine-Interfaces</h3>
-                                        <a href="https://calahealth.com/" target="_blank"> <div class="square img_1-1 hover"> </div> </a>
-                                        <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"> </div> </a>
-                                        <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"> </div> </a>
-                                        <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"> </div> </a>
-                                        <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"> </div> </a>
-                                        <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"> </div> </a>
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="https://calahealth.com/" target="_blank">
+                                        <div class="square img_1-1 hover"> </a>
+                                        <br><br><br><br><br><br>Wearable neuromodulator targeting the PNS to alleviate essential tremor.
+                                        </div>
+                                        </div>
+
+
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"></a>
+                                        <br><br><br><br><br><br><font color="white">Wearable electromyography (EMG) to decode neural signals for hand gestures.</font><br>
+                                        </div>
+                                        </div>
+
+
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"> </a>
+                                        <br><br><br><br><br><br>A non-invasive brain machine interface company.
+                                        </div>
+                                        </div>
+
+
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"> </a>
+                                        <br><br><br><br><br><br>Wearable electroencephalogram (EEG) headset technology.
+                                        </div>
+                                        </div>
+
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"> </a>
+                                        <br><br><br><br><br><br>External and subcutaneous trigeminal nerve stimulation.
+                                        </div>
+                                        </div>
+
+                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
+                                        <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"> </a>
+                                        <br><br><br><br><br><br><font color="white">Skull-penetrating infrared light technology to measure blood flow.</font>
+                                        </div>
+                                        </div>
+
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
 
                                         <h3>Invasive:
                                         <br>
@@ -320,6 +357,10 @@
                                         <a href="https://paradromics.com/" target="_blank"> <div class="square img_5-2"> </div> </a>
                                         <a href="https://rippleneuro.com/ripple-products/" target="_blank"> <div class="square img_5-3"> </div> </a>
 
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
+
                                         <h3>X-genetics:
                                         <br>
                                         Controlling Neurons for Neural Circuit Investigation</h3>
@@ -327,12 +368,20 @@
                                         <a href="https://www.codabiotherapeutics.com/" target="_blank"> <div class="square img_6-2"> </div> </a>
                                         <div class="square"></div>
 
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
+
                                         <h3>Hardware / Software to Enable X-genetics:
                                         <br>
                                         Controlling Neurons for Neural Circuit Investigation</h3>
                                         <a href="https://www.inscopix.com/technology" target="_blank"> <div class="square img_7-1"> </div> </a>
                                         <a href="https://www.neurophotometrics.com/" target="_blank"> <div class="square img_7-2"> </div> </a>
                                         <a href="http://www.neurolux.org/product-overview/" target="_blank"> <div class="square img_7-3"> </div> </a>
+
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
 
                                         <h3>Neural Priciples in Hardware / Software</h3>
                                         <a href="https://developer.arm.com/ip-products/processors/cortex-m/cortex-m4/docs" target="_blank"> <div class="square img_8-1"> </div> </a>
