checking mobile format

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -44,9 +44,9 @@
     float:left;
     position: relative;
     width: 30%;
-    /*padding-bottom : 20%;*/ /* = width for a 1:1 aspect ratio */
+    padding-bottom : 20%; /* = width for a 1:1 aspect ratio */
     margin:1.66%;
-    background-position:top;
+    background-position:center;
     background-repeat:no-repeat;
     background-size:contain; /* you change this to "contain" if you don't want the images to be cropped */
     }
@@ -300,45 +300,23 @@
                                         <h3>Non-invasive:
                                         <br>
                                         Neuromodulators / Neurorecorders / Brain-Machine-Interfaces</h3>
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="https://calahealth.com/" target="_blank">
-                                        <div class="square img_1-1 hover"> </a>
-                                        <br><br><br><br><br><br>Wearable neuromodulator targeting the PNS to alleviate essential tremor.
-                                        </div>
-                                        </div>
-
-
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"></a>
-                                        <br><br><br><br><br><br><font color="white">Wearable electromyography (EMG) to decode neural signals for hand gestures.</font><br>
-                                        </div>
-                                        </div>
-
-
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"> </a>
-                                        <br><br><br><br><br><br>A non-invasive brain machine interface company.
-                                        </div>
+                                        <a href="https://calahealth.com/" target="_blank"><div class="square img_1-1 hover"></div></a>
+                                        <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"></div></a>
+                                        <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"></div></a>
+                                        <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"></div></a>
+                                        <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"></div></a>
+                                        <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"></div></a>
+                                        <div>
+                                            <ul>
+                                                <li><a href="https://calahealth.com/" target="_blank"><b>Cala Health:</b></a> Wearable neuromodulator targeting the peripheral nervous system to alleviate essential tremor.</li>
+                                                <li><a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"><b>CTRL-Labs:</b></a> Wearable electromyography (EMG) technology to decode neural signals for hand gestures.</li>
+                                                <li><a href="https://kernel.co/" target="_blank"><b>Kernel:</b></a> A non-invasive brain machine interface company.</li>
+                                                <li><a href="https://choosemuse.com/how-it-works/" target="_blank"><b>Muse:</b></a> Wearable electroencephalogram (EEG) headset technology.</li>
+                                                <li><a href="http://www.neurosigma.com/research.html" target="_blank"><b>Neurosigma:</b></a> External and subcutaneous trigeminal nerve stimulation.</li>
+                                                <li><a href="https://www.openwater.cc/" target="_blank"><b>Openwater:</b></a> Skull-penetrating infrared light technology to measure blood flow.</li>
+                                            </ul>
                                         </div>
 
-
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"> </a>
-                                        <br><br><br><br><br><br>Wearable electroencephalogram (EEG) headset technology.
-                                        </div>
-                                        </div>
-
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"> </a>
-                                        <br><br><br><br><br><br>External and subcutaneous trigeminal nerve stimulation.
-                                        </div>
-                                        </div>
-
-                                        <div style="width:image width px; font-size:80%; text-align:center; bottom:0;">
-                                        <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"> </a>
-                                        <br><br><br><br><br><br><font color="white">Skull-penetrating infrared light technology to measure blood flow.</font>
-                                        </div>
-                                        </div>
 
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
