fixing text spacing

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -306,6 +306,9 @@
                                         <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"></div></a>
                                         <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"></div></a>
                                         <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"></div></a>
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
                                         <div>
                                             <ul>
                                                 <li><a href="https://calahealth.com/" target="_blank"><b>Cala Health:</b></a> Wearable neuromodulator targeting the peripheral nervous system to alleviate essential tremor.</li>
